manifests/ingress/daemonset.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: ingress-controller-nginx
  namespace: ingress
  labels:
    app: ingress-controller
    component: nginx
spec:
  template:
    metadata:
      labels:
        app: ingress-controller
        component: nginx
    spec:
      # terminationGracePeriodSeconds: 60
      hostNetwork: true
      containers:
      - image: gcr.io/google_containers/nginx-ingress-controller:0.8.3
        name: ingress-controller-nginx
        # imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 80
          # hostPort: 80
        - containerPort: 443
          # hostPort: 443
        args:
        - /nginx-ingress-controller
        - --default-backend-service=$(POD_NAMESPACE)/ingress-controller-defb
        - --nginx-configmap=$(POD_NAMESPACE)/ingress-controller-config
        - --v=3
        volumeMounts:
          - mountPath: /etc/nginx/template
            name: config-template
            readOnly: true
      volumes:
        - name: config-template
          configMap:
            name: ingress-controller-config-template
            items:
            - key: nginx.tmpl
              path: nginx.tmpl
