manifests/ingress/elasticsearch-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: logging
  labels:
    app: elasticsearch
    component: ingress
  annotations:
    # ingress.kubernetes.io/auth-secret: elasticsearch-basic-auth
    # ingress.kubernetes.io/auth-type: basic
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: elasticsearch.kube.codeformuenster.org
    http:
      paths:
      - backend:
          serviceName: elasticsearch
          servicePort: 9200
        path: /
  tls:
  - hosts:
    - elasticsearch.kube.codeformuenster.org
    secretName: elasticsearch-tls
