manifests/ingress/kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: logging
  labels:
    app: kibana
    component: ingress
  annotations:
    ingress.kubernetes.io/auth-secret: kibana-basic-auth
    ingress.kubernetes.io/auth-type: basic
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: kibana.kube.codeformuenster.org
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 5601
        path: /
  tls:
  - hosts:
    - kibana.kube.codeformuenster.org
    secretName: kibana-tls
